k8s/apps/coredns/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: coredns
    app.kubernetes.io/name: coredns
  name: coredns
  namespace: coredns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coredns
      app.kubernetes.io/name: coredns
  template:
    metadata:
      labels:
        app: coredns
        app.kubernetes.io/name: coredns
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - coredns
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - args:
            - -conf
            - /etc/coredns/Corefile
          image: coredns/coredns:1.14.7@sha256:7efd3c635b03efd68c4e8398fc45f0d993d0e9ab016f72c1cefb0fd6d01aa286
          livenessProbe:
            httpGet:
              path: /health
              port: liveness-probe
          name: coredns
          ports:
            - containerPort: 53
              name: dns
              protocol: UDP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 853
              name: dns-over-tls
              protocol: TCP
            - containerPort: 443
              name: dns-over-https
              protocol: TCP
            - containerPort: 8080
              name: liveness-probe
              protocol: TCP
            - containerPort: 8181
              name: readiness-probe
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: readiness-probe
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: RestartContainer
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 5m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/coredns
              name: corefile
              readOnly: true
      volumes:
        - configMap:
            name: coredns-config-5ffb83
          name: corefile
