k8s/apps/coredns/etcd-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: coredns-etcd
    app.kubernetes.io/name: coredns-etcd
  name: coredns-etcd
  namespace: coredns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: coredns-etcd
      app.kubernetes.io/name: coredns-etcd
  serviceName: coredns-etcd-headless
  template:
    metadata:
      labels:
        app: coredns-etcd
        app.kubernetes.io/name: coredns-etcd
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: storage.walnuts.dev/slow
                    operator: DoesNotExist
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: coredns-etcd
                    app.kubernetes.io/name: coredns-etcd
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - args:
            - --name=$(POD_NAME)
            - --data-dir=/var/lib/etcd
            - --listen-client-urls=http://0.0.0.0:2379
            - --advertise-client-urls=http://$(POD_NAME).coredns-etcd-headless.$(POD_NAMESPACE).svc.cluster.local:2379
            - --listen-peer-urls=http://0.0.0.0:2380
            - --initial-advertise-peer-urls=http://$(POD_NAME).coredns-etcd-headless.$(POD_NAMESPACE).svc.cluster.local:2380
            - --initial-cluster=coredns-etcd-0=http://coredns-etcd-0.coredns-etcd-headless.coredns.svc.cluster.local:2380,coredns-etcd-1=http://coredns-etcd-1.coredns-etcd-headless.coredns.svc.cluster.local:2380,coredns-etcd-2=http://coredns-etcd-2.coredns-etcd-headless.coredns.svc.cluster.local:2380
            - --initial-cluster-token=coredns-etcd
            - --initial-cluster-state=new
            - --auto-compaction-mode=periodic
            - --auto-compaction-retention=1h
          command:
            - /usr/local/bin/etcd
          image: quay.io/coreos/etcd:v3.7.2@sha256:e9afa62b1e914f02db62e5c46a7a140d8cdf026f2ed888cab4e5a142ec4d06fd
          livenessProbe:
            tcpSocket:
              port: client
          name: etcd
          ports:
            - containerPort: 2379
              name: client
            - containerPort: 2380
              name: peer
          readinessProbe:
            tcpSocket:
              port: client
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 128Mi
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /var/lib/etcd
              name: data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
