k8s/apps/coredns/etcd-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: coredns-etcd
    app.kubernetes.io/name: coredns-etcd
  name: coredns-etcd
  namespace: coredns
spec:
  ports:
    - name: client
      port: 2379
      targetPort: client
  selector:
    app: coredns-etcd
    app.kubernetes.io/name: coredns-etcd
