k8s/apps/coredns/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    lbipam.cilium.io/ips: 192.168.12.135
  labels:
    app: coredns
    app.kubernetes.io/name: coredns
  name: coredns
  namespace: coredns
spec:
  ports:
    - name: dns
      port: 53
      protocol: UDP
      targetPort: dns
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: dns
    - name: dns-over-tls
      port: 853
      protocol: TCP
      targetPort: dns-over-tls
    - name: dns-over-https
      port: 443
      protocol: TCP
      targetPort: dns-over-https
  selector:
    app: coredns
    app.kubernetes.io/name: coredns
  type: LoadBalancer
