k8s/apps/coredns/network-policy-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: coredns-egress
  namespace: coredns
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 2379
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: coredns
          podSelector:
            matchLabels:
              app: coredns-etcd
              app.kubernetes.io/name: coredns-etcd
    - ports:
        - port: 53
          protocol: TCP
      to:
        - ipBlock:
            cidr: 1.1.1.1/32
        - ipBlock:
            cidr: 1.0.0.1/32
  podSelector:
    matchLabels:
      app: coredns
      app.kubernetes.io/name: coredns
  policyTypes:
    - Egress
